turtleart.polygon7.Polygon7.scala.error
Compilation error:
Polygon7:4: error: ')' expected but ';' found.
    right(Double(360/7);
                       ^