turtleart.polygon7.Polygon7.scala.code
override def run() {
   for(i<-1 to 7){
    forward(80.0);
    right(Double(360/7);
  }
}